feat: metainfo for rpc debugging
