# thrift-gen-rpc-swagger/example/docs/openapi.yaml
@@ -9,17 +9,16 @@ info:
 servers:
     - url: http://127.0.0.1:8080
 paths:
-    /body:
+    /BodyMethod:
         post:
             tags:
                 - HelloService1
             operationId: HelloService1_BodyMethod
             parameters:
-                - name: query2
+                - name: ttheader
                   in: query
-                  description: 'field: query描述'
                   schema:
-                    type: string
+                    type: object
             requestBody:
                 description: BodyReq
                 content:
@@ -27,89 +26,96 @@ paths:
                         schema:
                             type: object
                             properties:
-                                body:
+                                BodyValue:
                                     type: string
                                     description: 'field: body描述'
+                                QueryValue:
+                                    type: string
+                                    description: 'field: query描述'
             responses:
                 "200":
                     description: HelloResp
-                    headers:
-                        token:
-                            schema:
-                                type: string
                     content:
                         application/json:
                             schema:
-                                $ref: '#/components/schemas/HelloRespBody'
-    /hello1:
-        get:
-            tags:
-                - HelloService1
-            operationId: HelloService1_QueryMethod
-            parameters:
-                - name: query2
-                  in: query
-                  required: true
-                  schema:
-                    title: Name
-                    maxLength: 50
-                    minLength: 1
-                    type: string
-                    description: Name
-                - name: items
-                  in: query
-                  schema:
-                    type: array
-                    items:
-                        type: string
-            responses:
-                "200":
-                    description: HelloResp
-                    headers:
-                        token:
-                            schema:
-                                type: string
-                    content:
-                        application/json:
-                            schema:
-                                $ref: '#/components/schemas/HelloRespBody'
-    /path{path1}:
-        get:
+                                $ref: '#/components/schemas/HelloResp'
+    /PathMethod:
+        post:
             tags:
                 - HelloService1
             operationId: HelloService1_PathMethod
             parameters:
-                - name: path1
-                  in: path
-                  description: 'field: path描述'
-                  required: true
+                - name: ttheader
+                  in: query
                   schema:
-                    type: string
+                    type: object
+            requestBody:
+                description: PathReq
+                content:
+                    application/json:
+                        schema:
+                            type: object
+                            properties:
+                                PathValue:
+                                    type: string
+                                    description: 'field: path描述'
             responses:
                 "200":
                     description: HelloResp
-                    headers:
-                        token:
-                            schema:
-                                type: string
                     content:
                         application/json:
                             schema:
-                                $ref: '#/components/schemas/HelloRespBody'
+                                $ref: '#/components/schemas/HelloResp'
+    /QueryMethod:
+        post:
+            tags:
+                - HelloService1
+            operationId: HelloService1_QueryMethod
+            parameters:
+                - name: ttheader
+                  in: query
+                  schema:
+                    type: object
+            requestBody:
+                description: QueryReq
+                content:
+                    application/json:
+                        schema:
+                            type: object
+                            properties:
+                                QueryValue:
+                                    title: Name
+                                    maxLength: 50
+                                    minLength: 1
+                                    type: string
+                                    description: Name
+                                items:
+                                    type: array
+                                    items:
+                                        type: string
+            responses:
+                "200":
+                    description: HelloResp
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/HelloResp'
 components:
     schemas:
-        HelloRespBody:
+        HelloResp:
             title: Hello - response
-            required:
-                - body
             type: object
             properties:
-                body:
+                RespBody:
                     title: response content
                     maxLength: 80
                     minLength: 1
                     type: string
                     description: response content
+                token:
+                    title: token
+                    type: string
+                    description: token
             description: Hello - response
 tags:
     - name: HelloService1
