# thrift-gen-rpc-swagger/generator/server_gen.go
@@ -41,7 +41,7 @@ func NewServerGenerator(ast *parser.Thrift, args *args.Arguments) *ServerGenerat
 
 	idlPath := ast.Filename
 	if idlPath == "" {
-		logs.Errorf("IDL file path is empty")
+		logs.Errorf("failed to get Thrift file path")
 	}
 
 	hertzAddr := args.HertzAddr
@@ -95,23 +95,24 @@ const serverTemplate = `// Code generated by thrift-gen-rpc-swagger.
 package main
 
 import (
-	"bytes"
 	"context"
 	_ "embed"
 	"encoding/json"
 	"errors"
-	"fmt"
 	"net/http"
 	"os"
 	"path/filepath"
 	"strings"
 
+	"github.com/bytedance/gopkg/cloud/metainfo"
 	"github.com/cloudwego/hertz/pkg/app"
 	"github.com/cloudwego/hertz/pkg/app/server"
 	"github.com/cloudwego/hertz/pkg/common/hlog"
 	"github.com/cloudwego/kitex/client"
 	"github.com/cloudwego/kitex/client/genericclient"
 	"github.com/cloudwego/kitex/pkg/generic"
+	"github.com/cloudwego/kitex/pkg/transmeta"
+	"github.com/cloudwego/kitex/transport"
 	"github.com/hertz-contrib/cors"
 	"github.com/hertz-contrib/swagger"
 	swaggerFiles "github.com/swaggo/files"
@@ -157,11 +158,12 @@ func findThriftFile(fileName string) (string, error) {
 	}
 
 	parentDir := filepath.Dir(workingDir)
-	for parentDir != "/" && parentDir != "." {
+	for parentDir != "/" && parentDir != "." && parentDir != workingDir {
 		filePath := filepath.Join(parentDir, fileName)
 		if _, err := os.Stat(filePath); err == nil {
 			return filePath, nil
 		}
+		workingDir = parentDir
 		parentDir = filepath.Dir(parentDir)
 	}
 
@@ -179,12 +181,15 @@ func initializeGenericClient() genericclient.Client {
 		hlog.Fatal("Failed to create ThriftFileProvider:", err)
 	}
 
-	g, err := generic.HTTPThriftGeneric(p)
+	g, err := generic.JSONThriftGeneric(p)
 	if err != nil {
 		hlog.Fatal("Failed to create HTTPThriftGeneric:", err)
 	}
-
-	cli, err := genericclient.NewClient("swagger", g, client.WithHostPorts("{{.KitexAddr}}"))
+	var opts []client.Option
+	opts = append(opts, client.WithTransportProtocol(transport.TTHeader))
+	opts = append(opts, client.WithMetaHandler(transmeta.ClientTTHeaderHandler))
+	opts = append(opts, client.WithHostPorts("{{.KitexAddr}}"))
+	cli, err := genericclient.NewClient("swagger", g, opts...)
 	if err != nil {
 		hlog.Fatal("Failed to create generic client:", err)
 	}
@@ -209,84 +214,66 @@ func setupProxyRoutes(h *server.Hertz, cli genericclient.Client) {
 			return
 		}
 
-		queryString := formatQueryParams(ctx)
 		bodyBytes := ctx.Request.Body()
-		contentType := string(ctx.Request.Header.ContentType())
 
-		url := "http://{{.HertzAddr}}/" + serviceMethod
-		if len(queryString) > 0 {
-			url += "?" + queryString
+		queryMap := formatQueryParams(ctx)
+
+		for k, v := range queryMap {
+			if strings.HasPrefix(k, "p_") {
+				c = metainfo.WithPersistentValue(c, k, v)
+			} else {
+				c = metainfo.WithValue(c, k, v)
+			}
 		}
 
-		req, err := http.NewRequest(string(ctx.Request.Method()), url, bytes.NewBuffer(bodyBytes))
+		c = metainfo.WithBackwardValues(c)
+		
+		jReq := string(bodyBytes)
+
+		jRsp, err := cli.GenericCall(c, serviceMethod, jReq)
 		if err != nil {
-			handleError(ctx, err.Error(), http.StatusInternalServerError)
+			hlog.Errorf("GenericCall error: %v", err)
+			ctx.JSON(500, map[string]interface{}{
+				"error": err.Error(),
+			})
 			return
 		}
 
-		ctx.Request.Header.VisitAll(func(key, value []byte) {
-			req.Header.Set(string(key), string(value))
-		})
-
-		req.Header.Set("Content-Type", contentType)
-
-		handleProxyRequest(ctx, cli, req)
-	})
-}
-
-func formatQueryParams(ctx *app.RequestContext) string {
-	var newQueryParams []string
-	ctx.Request.URI().QueryArgs().VisitAll(func(key, value []byte) {
-		newQueryParams = append(newQueryParams, string(key)+"="+string(value))
-	})
-	return strings.Join(newQueryParams, "&")
-}
-
-func handleProxyRequest(ctx *app.RequestContext, cli genericclient.Client, req *http.Request) {
-	customReq, err := generic.FromHTTPRequest(req)
-	if err != nil {
-		handleError(ctx, "Failed to create generic request", http.StatusInternalServerError)
-		return
-	}
-
-	resp, err := cli.GenericCall(context.Background(), "", customReq)
-	if err != nil {
-		handleError(ctx, "GenericCall error: "+err.Error(), http.StatusInternalServerError)
-		return
-	}
-
-	if resp == nil {
-		handleError(ctx, "Received nil response from the service", http.StatusInternalServerError)
-		return
-	}
-
-	realResp, ok := resp.(*generic.HTTPResponse)
-	if !ok {
-		handleError(ctx, "Invalid response format", http.StatusInternalServerError)
-		return
-	}
-
-	sendResponse(ctx, realResp)
-}
-
-func sendResponse(ctx *app.RequestContext, realResp *generic.HTTPResponse) {
-	if realResp.StatusCode == 0 {
-		realResp.StatusCode = http.StatusOK
-	}
-
-	for key, values := range realResp.Header {
-		for _, value := range values {
-			ctx.Response.Header.Set(key, value)
+		result := make(map[string]interface{})
+		if err := json.Unmarshal([]byte(jRsp.(string)), &result); err != nil {
+			hlog.Errorf("Failed to unmarshal response body: %v", err)
+			ctx.JSON(500, map[string]interface{}{
+				"error": "Failed to unmarshal response body",
+			})
+			return
 		}
-	}
 
-	respBody, err := json.Marshal(realResp.Body)
-	if err != nil {
-		handleError(ctx, "Failed to marshal response body", http.StatusInternalServerError)
-		return
-	}
+		m := metainfo.RecvAllBackwardValues(c)
+		
+		for key, value := range m {
+			result[key] = value
+		}
 
-	ctx.Data(int(realResp.StatusCode), string(realResp.ContentType), respBody)
+		respBody, err := json.Marshal(result)
+		if err != nil {
+			hlog.Errorf("Failed to marshal response body: %v", err)
+			ctx.JSON(500, map[string]interface{}{
+				"error": "Failed to marshal response body",
+			})
+			return
+		}
+
+		ctx.Data(http.StatusOK, "application/json", respBody)
+
+	})
+}
+
+func formatQueryParams(ctx *app.RequestContext) map[string]string {
+	var QueryParams = make(map[string]string)
+	ctx.Request.URI().QueryArgs().VisitAll(func(key, value []byte) {
+		QueryParams[string(key)] = string(value)
+	})
+	return QueryParams
 }
 
 func handleError(ctx *app.RequestContext, errMsg string, statusCode int) {
